style.css
/* ... */
@font-face {
  font-family: 'Switzer-Black';
  src: url('/assets/fonts/Switzer_Complete/Fonts/WEB/fonts/Switzer-Regular.woff') format('woff'),
       url('assets/fonts/Switzer_Complete/Fonts/WEB/fonts/Switzer-Regular.woff') format('woff'),
       url('assets/fonts/Switzer_Complete/Fonts/WEB/fonts/Switzer-Regulat.ttf') format('truetype');
}


/*
  EFFECTS TO ADD: 
  1. DARK GRADIENT THAT SLIDES UP REVEALING PHOTOS
  2. FIX STICKY NAV 
  3. FADE IN TEXT EFFECTS 
  4. GLOW ON HOVER FOR BUTTON EFFECT 
  */

* {
    margin: 0;
    padding: 0; 
    box-sizing: border-box;
    border: solid 1px lightblue;
}
body {
    background-color: var(--dark-color);
    color: var(--light-color);
    font-family: 'Switzer-Black', sans-serif;
    font-size: 16px;
    line-height: 1.5;
}
nav, footer, h1 {
  font-family:'Times New Roman', Times, serif;
}
 nav {
   height: 100px;
   display: flex;
   align-items: center;
   background-color: var(--dark-color);
   justify-content: flex-end;
   background: rgba(0, 0, 0, 0.3); /* Semi-transparent background */
   backdrop-filter: blur(10px); /* Creates the blur effect */
   -webkit-backdrop-filter: blur(10px); /* Safari support */
   border-bottom: 1px solid rgba(255, 255, 255, 0.1); /* Optional: subtle border */
   position: sticky;
   top: 0; /* Remember to always add this for sticky navs */
   z-index: 1000;
   margin-bottom: -104px; 
   font-weight: 300;
   padding: 0 30px;
     }
 
 .links-container {
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    margin: 0 auto;
 }

 nav a {
    height: 100%;
    padding: 30px;
    display: flex;
    align-items: center;
    text-decoration: none;
    color: var(--light-color);
 }

 nav a:hover{
    color: var(--accent-color);
 }

 nav .home-link {
    margin-right: auto;
 }

 nav svg{
    fill: var(--accent-color);
 }
.logo {
    color: var(--light-color);
    font-size: 40px;
    font-weight: 300;
    padding: 20px;
 }
 .logo-mobile {
    display: none;
}


/*SIDEBAR-ACTIVE is the label for the checkbox, display:none removes the checkbox from being shown*/
 #sidebar-active {
    display: none; 
 }
/*HIDES BURGER AND CLOSE ICON FROM SHOWING*/ 
 .open-sidebar-button, .close-sidebar-button {
    display: none;
 }

 @media(max-width: 580px) {
    .links-container {
        flex-direction: column;
        align-items: flex-start;
        justify-content: flex-start;
        position: fixed;
        top: 0;
        right:-100%; /*Instead of display:none; we position it 100% to the right so we can use an animation property. This MUST be paired with the checked ~ so the menu will return to right: 0 when checked*/ 
        z-index: 10;
        width: 150px;
        background-color: var(--accent-color);
        transition: 0.75s ease-out;
        height: 100vh;
    }
    nav a{
        box-sizing: border-box;
        height: auto;
        width: 100%;
        padding: 20px 30px;
        color: var(--dark-color);
        justify-content: flex-start;
    }
    .open-sidebar-button, .close-sidebar-button{
        display: block;
        padding: 20px;
    }
    #sidebar-active:checked ~ .links-container{
        right: 0;
    }
    .exit-svg {
        fill: var(--accent-color);
 }
 .logo {
   display: none;
 }
   .burger-svg {
      fill: var(--dark-color);
   }

 #sidebar-active:checked ~ #overlay{
    height: 100%;
    width: 100%;
    position: fixed;
    top:0;
    left:0;
    z-index: 9;
 }
 .logo-mobile {
   display: block;
   z-index:1001;
    color: black;
    font-size: 20px;
    font-weight: 200;
    position: absolute;
    left: 20%;
    top: 4%;
    transform: translateX(-50%);
}
}

/*-------------------------HERO SECTION---------------------------------*/

.hero-section {
    width: 100%;
    height: 100vh;
    background-image: url("assets/photos/Exotic\ dancer\ lying\ on\ back.jpg");
    background-size: cover;
    background-position: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: var(--muted-color);
}

.hero {
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    color: var(--text-color);
    margin-top: 5%;
}
.hero-text {
    display: flex;
    flex-direction: column;
    gap: 20px;
    width: 100%;
}
.location-text {
  letter-spacing: var(--letter-spacing-widest);
  text-transform: uppercase;
  font-size: var(--font-subtitle);
}
 #hero-headline {
    font-size: var(--font-title);
     font-weight: 400;
    }

#hero-subheadline {
    font-size: var(--font-subtitle);
    font-weight: 200;
}
.subtitle {
  font-size: var(--font-subtitle);
}
.hero-buttons {
    display: flex;
    justify-content: center;
    margin-top: 100px
}
button {
    width: 200px;
    height: 60px;
    background-color: var(--muted-color);
    color: var(--light-color);
    font-size: 20px;
    letter-spacing: var(--letter-spacing-widest);
    border: solid 1px var(--light-color);
}

a {
    text-decoration: none;
    color: var(--light-color)
}
@media screen and (max-width: 480px) {
    .hero-text {
      gap: 50px;
    }
}
/*-------------------------CTA SECTION---------------------------------*/
.cta-section {
    min-height: 70vh;
    width: 100%; 
    background: url(assets/Girl\ with\ flower\ in\ mouth.jpg);
    background-position: center;
    background-size: cover;
    background-attachment: fixed;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}
.cta-text-box {
    padding: var(--medium-spacing);
    width: var(--text-width);
    text-align: center;
}
.cta-text {
    color: hsla(rgb(198, 189, 189) 50%);
    padding: 2rem;
}
/* ... */

